--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
   "name": "Meine Web-App",
   "short_name": "Web-App",
-  "start_url": "/index.html",
+  "start_url": "/wled/index.html",
+  "scope": "/wled/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
